Try Fix 1: Size of images on the About page on mobile

--- a/app/static/css/templates/about.css
+++ b/app/static/css/templates/about.css
@@ -12,6 +12,7 @@
 .profile_img {
     max-width: 200px;
     width: 100%;
+    height: auto;
     border-radius: 2%;
 }
 
@@ -27,6 +28,7 @@
 
 .travel_img {
     width: 100%;
+    height: auto;
     border-radius: 0.75%;
 }
 
